# docgen-mcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  example_resume.typ  standalone_resume.typ
.github/workflows/: cd.yml  ci.yml
examples/: notifications_example.rs
prompts/: cover-letter-best-practices.md  document-type-guide.md  resume-best-practices.md
src/: main.rs  storage.rs
src/documents/: cover_letter.rs  mod.rs  resume.rs
src/mcp/: mod.rs  notifications.rs  prompts.rs  resources.rs  tools.rs
src/typst/: compiler.rs  mod.rs  transform.rs  world.rs
templates/: cover_letter.typ  resume.typ
tests/: integration.rs
tests/fixtures/: invalid_missing_basics.json  invalid_missing_email.json  invalid_work_missing_position.json  invalid_wrong_type_work.json  sample_resume.json
