[package]
name = "docgen-mcp"
version = "0.1.0"
edition = "2024"
description = "A Model Context Protocol (MCP) server for programmatic document generation, powered by Typst"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
comemo = "0.5.0"
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-pdf = "0.14.2"

[dev-dependencies]
pdf-extract = "0.10.0"
reqwest = "0.12"
